--- a/render.yaml
+++ b/render.yaml
@@ -4,5 +4,4 @@ services:
     env: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn core.wsgi:application"
-    preDeployCommand: "python manage.py migrate"
-    preDeployCommand: "python manage.py collectstatic --noinput"
+    preDeployCommand: "python manage.py migrate && python manage.py collectstatic --noinput"
