--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ __pycache__/
 db.sqlite3
 .env
 staticfiles/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
