--- a/.ebextensions/01_wsgi.config
+++ b/.ebextensions/01_wsgi.config
@@ -1,3 +1,3 @@
 option_settings:
-  aws:elasticbeanstalk:container:python:
-    WSGIPath: core/wsgi.py
+  aws:elasticbeanstalk:application:environment:
+    DJANGO_ALLOWED_HOSTS: ".elasticbeanstalk.com,localhost,127.0.0.1"
