--- a/render.yaml
+++ b/render.yaml
@@ -5,3 +5,6 @@ services:
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn core.wsgi:application"
     preDeployCommand: "python manage.py migrate && python manage.py collectstatic --noinput"
+    envVars:
+      - key: DJANGO_DEBUG
+        value: "False"
